# Open3DMotion

./: LICENSE.txt  README.md
src/: CMakeLists.txt
src/Open3DMotion/: CMakeLists.txt
src/Open3DMotion/Bindings/Python/: BinMemFactoryPython.cpp  BinMemFactoryPython.h  MemoryHandlerPython.cpp  MemoryHandlerPython.h  PythonConvert.cpp  PythonConvert.h
src/Open3DMotion/Biomechanics/Algorithms/: ForceCalcAMTI.cpp  ForceCalcAMTI.h  ForceCalcKistler.cpp  ForceCalcKistler.h  ForceCalculator.cpp  ForceCalculator.h  ForceCalculatorFactory.cpp  ForceCalculatorFactory.h  ForceMeasurements.cpp  ForceMeasurements.h  Interpolate.cpp  Interpolate.h
src/Open3DMotion/Biomechanics/Algorithms/MOSHFIT/: RigidBodyShape.cpp  RigidBodyShape.h  RigidBodyShapeCollection.cpp  RigidBodyShapeCollection.h
src/Open3DMotion/Biomechanics/Trial/: EventGroup.cpp  ForcePlate.cpp  ForcePlate.h  Pointer.cpp  Pointer.h  TSFactory.cpp  TSFactory.h  TimeRange.cpp  TimeRange.h  TimeSequence.cpp  TimeSequence.h  Trial.cpp  Trial.h
src/Open3DMotion/Maths/: LinearSolve3.cpp  Matrix.cpp  Matrix3x3.cpp
src/Open3DMotion/MotionBundle/: MOBL.cpp  MOBL.h  MotionBundleHandler.cpp  MotionBundleHandler.h
src/Open3DMotion/MotionFile/: MotionFileException.h  MotionFileFormatList.h  MotionFileHandler.cpp  MotionFileHandler.h
src/Open3DMotion/MotionFile/Formats/C3D/: C3DTSFactory.h  FileFormatC3D.cpp  MapC3DParameters.h
src/Open3DMotion/MotionFile/Formats/CODAText/: FileFormatCODAText.cpp  MATextReader.cpp
src/Open3DMotion/MotionFile/Formats/MDF/: FileFormatMDF.cpp  ForcePlateMDF.cpp  ForcePlateMDF.h
src/Open3DMotion/MotionFile/Formats/MoXie/: FileFormatMoXie.cpp
src/Open3DMotion/MotionFile/Formats/XMove/: FileFormatOptionsXMove.cpp  FileFormatOptionsXMove.h  FileFormatXMove.cpp  FileFormatXMove.h  XMLReadingMachineLegacy.cpp  XMLReadingMachineLegacy.h  XMLWritingMachineLegacy.cpp  XMLWritingMachineLegacy.h
src/Open3DMotion/OpenORM/: Types.h
src/Open3DMotion/OpenORM/Branches/: TreeCompound.h
src/Open3DMotion/OpenORM/IO/BSON/: BSONDateHolder.cpp  BSONDateHolder.h  BSONInputStreamBuffer.cpp  BSONInputStreamBuffer.h  BSONInputStreamGZ.cpp  BSONObjectIdList.cpp  BSONObjectIdList.h  BSONOutputStream.h  BSONOutputStreamBuffer.cpp  BSONOutputStreamBuffer.h  BSONOutputStreamGZ.cpp  BSONOutputStreamGZ.h  BSONOutputStreamSTL.cpp  BSONOutputStreamSTL.h  BSONReadException.h  BSONReader.cpp  BSONReader.h  BSONReaderMOBL.cpp  BSONReaderMOBL.h  BSONWriteException.h  BSONWriter.cpp  BSONWriter.h  BSONWriterMOBL.cpp  BSONWriterMOBL.h
src/Open3DMotion/OpenORM/IO/XML/: ReadWriteXML.cpp  ReadWriteXML.h  ReadWriteXMLBinary.cpp  ReadWriteXMLBool.cpp  ReadWriteXMLCompound.cpp  ReadWriteXMLCompound.h  ReadWriteXMLFloat64.cpp  ReadWriteXMLInt32.cpp  ReadWriteXMLList.cpp  XMLReadWriteMachine.cpp  XMLReadWriteMachine.h  XMLReadingMachine.cpp  XMLReadingMachine.h  XMLWritingMachine.cpp  XMLWritingMachine.h
src/Open3DMotion/OpenORM/Leaves/: TreeBinary.cpp  TreeBinary.h
src/Open3DMotion/OpenORM/Mappings/: MapArrayFloat64.h  MapArrayInt32.h  MapArraySimpleValue.h  MapBinary.h  MapBool.h  MapCompound.h
src/Open3DMotion/OpenORM/Mappings/RichBinary/: BinMemFactory.h  BinMemFactoryDefault.cpp  BinMemFactoryDefault.h  BinaryStructure.h  RichBinary.cpp  RichBinary.h  RichBinaryConvertFloat.cpp
src/Open3DMotionTest/: CMakeLists.txt  Open3DMotionTest.cpp
src/Open3DMotionTest/Bindings/Python/: PythonTotalRefCount.cpp  PythonTotalRefCount.h  TestMemoryHandlerPython.cpp  TestPythonConnection.cpp  TestPythonConvert.cpp  TestPythonMOBLRead.cpp
src/Open3DMotionTest/Biomechanics/Algorithms/: TestForceCalculator.cpp  TestForceMeasurements.cpp  TestLinearCalibration.cpp
src/Open3DMotionTest/Biomechanics/Algorithms/MOSHFIT/: RigidBodyShapeCollectionTest.cpp  RigidBodyShapeTest.cpp  TestRigidBodyShape.cpp  TestRigidBodyShapeCollection.cpp
src/Open3DMotionTest/Biomechanics/Trial/: TestEventArray.cpp  TestTimeRange.cpp  TestTimeSequence.cpp  TestTrialStructures.cpp
src/Open3DMotionTest/Data/C3D/: README.txt
src/Open3DMotionTest/Data/C3D/Sample08/: EB01PI.cpp  EB01PI.h
src/Open3DMotionTest/Data/CODAText/: CartWheel.cpp  CartWheel.h  CartWheel.txt  GraphData.txt
src/Open3DMotionTest/Data/GZ/: MakeGZTestData.java
src/Open3DMotionTest/Data/MDF/: ADemo1.cpp  ADemo1.h  ADemo1.java  Walk4.cpp  Walk4.h  Wheel.mdf  forceonly-2007-AMTIx1.mdf  gait-bilateral-2004-AMTIx2-MA63.mdf  gait-bilateral-2005-AMTIx2.mdf  gait-bilateral-2005-amtix2.c3d
src/Open3DMotionTest/Data/MOBL/: ADemo1.ODIN.mobl  ReachingTaskExample-20111013.mobl
src/Open3DMotionTest/Data/MoXie/: moxie_daq.xsd  moxie_elements.xsd  moxie_viewer.xsd  nwalk02.cpp  nwalk02.h  nwalk02.mox
src/Open3DMotionTest/Data/Temp/: .gitignore  README.txt
src/Open3DMotionTest/Data/XMove/: ADemo1.ODIN.Legacy.xmove  ADemo1.Open3DMotion.xmove
src/Open3DMotionTest/Maths/: TestLinearSolve3.cpp  TestMatrix3x3.cpp  TestRigidTransform3.cpp  TestVector3.cpp
src/Open3DMotionTest/MotionBundle/: TestMotionBundle.cpp
src/Open3DMotionTest/MotionFile/: MotionFileTest.h.in  TestC3D.cpp  TestCODAText.cpp  TestMATextReader.cpp  TestMDF.cpp  TestMapC3DParameters.cpp  TestMoXie.cpp  TestMotionFileFormatList.cpp  TestTSC3D.cpp  TestXMove.cpp  testADemo1File.cpp  testADemo1File.h  testSample08File.cpp  testSample08File.h  testWalk4DescriptorsInFile.cpp  testWalk4DescriptorsInFile.h
src/Open3DMotionTest/OpenORM/: TestMapArrayCompound.cpp  TestMapArrayFloat64.cpp  TestMapCompound.cpp  TestMapOptional.cpp  TestMemoryHandlerBasic.cpp  TestMemoryHandlerNull.cpp  TestTreeBinary.cpp  TestTreeBool.cpp  TestTreeCompound.cpp  TestTreeFloat64.cpp  TestTreeInt32.cpp  TestTreeList.cpp  TestTreeString.cpp
src/Open3DMotionTest/OpenORM/IO/: BSONWriter.cpp  BSONWriter.h  TestBSON.cpp  TestBSONReader.cpp  TestBSONStreamBuffer.cpp  TestBSONStreamGZ.cpp  TestBSONWriteRead.cpp  TestBSONWriter.cpp  TestXML.cpp
src/Open3DMotionTest/OpenORM/RichBinary/: TestBinIter.cpp  TestRichBinary.cpp  TestRichBinaryConvertFloat.cpp
